--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://seaumibnemamun.github.io/React_example/",
+  "homepage": "https://seaumibnemamun.github.io/React_example",
   "name": "working",
   "private": true,
   "version": "0.0.0",
